<resources>
    <string name="app_name">QrisAPP</string>
    <string name="email">Email</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="login">LOGIN</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="kirim_ulang_kode">Kirim Ulang Kode</string>
    <string name="input_6_digit_pin">Input 6 digit PIN</string>
    <string name="home">Home</string>
    <string name="transaction">Transaction</string>
    <string name="loading">Loading</string>
    <string name="get_data_loading">Sedang mengambil data...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_merchant">Profile Merchant</string>
    <string name="logout">Logout</string>
    <string name="notification">Notification</string>
    <string name="totalnetsales">Total Net Sales</string>
    <string name="district_text">District</string>
    <string name="informasi_merchant">Merchant</string>
    <string name="week_transaction">Week Transaction</string>
    <string name="transaksi_terakhir">Last Transaction</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="transaction_list">Transaction List</string>
    <string name="from">From</string>
    <string name="search">Search</string>
    <string name="to">To</string>
    <string name="status_image">Status Image</string>
    <string name="dummy_mid">13432531341543512342</string>
    <string name="text_merchant_name">PT Indopay Merchant Name</string>
    <string name="dummy_email_text">indopay@gmail.com</string>
    <string name="dummy_province">DKI JAKARTA</string>
    <string name="city">Kota</string>
    <string name="dummy_jakarta_pusat">Jakarta Pusat</string>
    <string name="merchant_address">Alamat Merchant</string>
    <string name="alamat_merchant">Jl K.H Mas Mansyur</string>
    <string name="jumlah_transaksi">Jumlah Transaksi</string>
    <string name="dummy_rp_5000_000">Rp 500.000</string>
    <string name="amount">Amount</string>
    <string name="active">Active</string>
    <string name="account_status">Status Akun</string>
    <string name="scan_qr_customer">Scan QR Customer</string>
    <string name="create_qr_dynamic">Create QR Dynamic</string>
    <string name="show_qr_dynamic">Show QR Dynamic</string>
    <string name="dummy_tagihan_hint">Rp. 40.000</string>
    <string name="eye_icon">eye icon</string>
    <string name="indopay_merchant_service">Indopay Merchant Service</string>
    <string name="default_notification_channel_id">default notification channel id</string>
    <string name="default_notification_channel_name">Channel IMS</string>
    <string name="default_notification_channel_description">Notification Indopay Merchant Services</string>
    <string name="icon_notif">icon notif</string>
    <string name="judul_notif">Transfer Berhasil</string>
</resources>