<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    tools:context=".ui.login.LoginActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.599"
        android:paddingBottom="30dp"
        android:background="@drawable/white_bg"
        android:elevation="6dp"
        android:orientation="vertical">

        <ImageView
        android:id="@+id/imageView2"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/img_login"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            android:text="@string/email"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/white_bg"
            android:elevation="5dp"
            android:ems="10"
            android:hint="@string/example_gmail_com"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="8dp"
            android:textColor="#000000"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="14sp"
            android:autofillHints="emailAddress" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#1C3879"
            android:text="@string/login"
            android:textAllCaps="false"
            app:cornerRadius="8dp"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loadingProgress"
        android:layout_height="70dp"
        android:layout_width="70dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="@id/linearLayout"
        app:layout_constraintTop_toTopOf="@id/linearLayout"
        app:lottie_rawRes="@raw/anim_loading"
        app:lottie_loop="true"
        app:lottie_autoPlay="true" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="27dp"
        android:src="@drawable/logo_idp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.94"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/indopay_merchant_service" />

</androidx.constraintlayout.widget.ConstraintLayout>