<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    tools:context=".ui.otp.OtpActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="360dp"
        android:layout_height="400dp"
        android:background="@drawable/white_bg"
        android:elevation="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/otp_verification"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/input_6_digit_pin"
            android:textColor="#000000"
            android:textSize="12sp" />

        <com.chaos.view.PinView
            android:id="@+id/otpInput"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:cursorVisible="false"
            android:elevation="50dp"
            android:inputType="number"
            android:itemBackground="@drawable/otp_bg"
            android:textColor="#000000"
            app:itemCount="6"
            app:itemRadius="8dp"
            app:itemSpacing="6dp"
            app:lineColor="#00000000"
            app:viewType="rectangle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/resendCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:text="@string/kirim_ulang_kode"
                android:textColor="#66000000"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/kodeCountDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="(120s)"
                android:textColor="#66000000" />

        </LinearLayout>


    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loadingProgress"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        android:layout_marginTop="50dp"
        app:lottie_rawRes="@raw/anim_loading"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:visibility="gone"/>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="27dp"
        android:src="@drawable/logo_idp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.94"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/indopay_merchant_service" />


</androidx.constraintlayout.widget.ConstraintLayout>